Starry Background HTML CSS

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,13 @@
+// Imports
+@import 'background';
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  color: white;
+}
+
 .App {
   text-align: center;
 }
@@ -8,7 +18,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: transparent;
   height: 150px;
   padding: 20px;
   color: white;
@@ -16,6 +26,7 @@
 
 .App-title {
   font-size: 1.5em;
+  color: white;
 }
 
 .App-intro {
@@ -23,6 +34,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
