background in place

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,43 +1,9 @@
 // Imports
-@import 'background';
+@import './background';
 
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   color: white;
-}
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: transparent;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
