--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -70,6 +70,42 @@
   animation: move-twink-back 400s linear infinite;
   z-index: -1; }
 
+.moon-component {
+  position: absolute;
+  border-radius: 50%;
+  background: #c7cbd1;
+  border: 2px solid #788999;
+  box-shadow: inset -50px 0px 0px 0px #a4a3a8; }
+  .moon-component .moon-body {
+    position: relative;
+    height: 100%; }
+    .moon-component .moon-body .crater {
+      position: absolute;
+      background: #747379;
+      border-radius: 50%; }
+      .moon-component .moon-body .crater.large {
+        width: 20%;
+        height: 20%;
+        box-shadow: inset 12px -2px 0px 0px #404040; }
+      .moon-component .moon-body .crater.medium {
+        width: 12%;
+        height: 12%;
+        box-shadow: inset 7px -2px 0px 0px #404040; }
+      .moon-component .moon-body .crater.small {
+        width: 5%;
+        height: 5%;
+        box-shadow: inset 4px -2px 0px 0px #404040; }
+  .moon-component.is-animated {
+    animation: moon-wiggle 4s infinite ease-in-out; }
+
+@keyframes moon-wiggle {
+  0% {
+    transform: translateY(15px); }
+  50% {
+    transform: translateY(-15px); }
+  100% {
+    transform: translateY(15px); } }
+
 body {
   margin: 0;
   padding: 0;
