Kärlek till månen

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -97,6 +97,8 @@
         box-shadow: inset 4px -2px 0px 0px #404040; }
   .moon-component.is-animated {
     animation: moon-wiggle 4s infinite ease-in-out; }
+  .moon-component.is-easter-egg {
+    animation: easter-egg-animation 30s linear; }
 
 @keyframes moon-wiggle {
   0% {
@@ -105,6 +107,15 @@
     transform: translateY(-15px); }
   100% {
     transform: translateY(15px); } }
+
+@keyframes easter-egg-animation {
+  0% {
+    transform: translateY(25px);
+    transform: scale(1.1); }
+  25% {
+    transform: rotate3d(45, 0, 0, 900deg) rotate(980deg) scale(0.01) translateY(-25px); }
+  100% {
+    transform: rotate3d(45, 0, 0, 900deg) rotate(980deg) scale(0.00001) translateY(-25px); } }
 
 body {
   margin: 0;
