--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -117,6 +117,17 @@
   100% {
     transform: rotate3d(45, 0, 0, 900deg) rotate(980deg) scale(0.00001) translateY(-25px); } }
 
+.welcome-window {
+  position: relative;
+  width: 25vw;
+  height: 60vh;
+  margin: 50px auto;
+  padding: 1%;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 1px solid #fff;
+  border-radius: 4px; }
+
 body {
   margin: 0;
   padding: 0;
