--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -74,7 +74,7 @@
   position: relative;
   width: 25vw;
   height: 60vh;
-  margin: 50px auto;
+  margin: 50px 200px;
   padding: 1%;
   z-index: 1000;
   background-color: rgba(255, 255, 255, 0.2);
