--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,3 +14,8 @@ body {
   padding: 0;
   font-family: sans-serif;
   color: white; }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
