--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,8 +12,23 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Bangers', cursive;
+  letter-spacing: 1.4px;
   color: white; }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  letter-spacing: 2px; }
+
+button {
+  font-family: 'Bangers', cursive; }
+
+input {
+  font-family: 'Bangers', cursive;
+  letter-spacing: 2px; }
 
 * {
   margin: 0;
