--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,6 +30,13 @@ input {
   font-family: 'Bangers', cursive;
   letter-spacing: 2px; }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */ }
+
 * {
   margin: 0;
   padding: 0;
